--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,10 @@ RewriteEngine On
 # RewriteCond %{REQUEST_URI} !public/
 # RewriteRule (.*) public/index.php?$1 [L]
 
+RewriteCond %{REQUEST_URI}::$1 ^(.*?/)(.*)::\2
+RewriteCond %{DOCUMENT_ROOT}%1public/%2 -f
+RewriteRule ^(.*)$  public/$1 [END]
+
 RewriteCond ${REQUEST_FILENAME} !-f
 RewriteCond ${REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !public/
