--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "compile": "node-sass src/client/scss/main.scss public/css/style.css -w"
