--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "autoload": {
         "psr-4": {
             "Core\\": "Core/",
-            "App\\": "App/"
+            "App\\": "App/",
+            "Helpers\\": "Helpers/"
         }
     }
 }
