--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "dependencies": {},
   "devDependencies": {
     "node-sass": "^5.0.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
+    "start": "npm-run-all --parallel compile compile:js",
+    "compile:js": "webpack --config webpack.config.js --watch",
     "compile": "node-sass src/client/scss/main.scss public/css/style.css -w",
     "compile:admin": "node-sass src/admin/scss/main.scss public/css/admin-style.css -w"
   },
