--- a/package.json
+++ b/package.json
@@ -5,14 +5,28 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "acorn": "^8.0.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglifycss": "^1.1.0",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start": "npm-run-all --parallel compile compile:js",
     "compile:js": "webpack --config webpack.config.js --watch",
+    "build:js": "webpack --config webpack.config.prod.js",
     "compile": "node-sass src/client/scss/main.scss public/css/style.css -w",
     "compile:admin": "node-sass src/admin/scss/main.scss public/css/admin-style.css -w"
   },
