--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,11 @@
 RewriteEngine On
 
+RewriteCond %{HTTP:X-Forwarded-Proto} !https
+RewriteCond %{HTTP_USER_AGENT} !(BlackBerry)
+RewriteCond %{HTTP_USER_AGENT} !(Windows\sNT\s5\.[12])
+RewriteCond %{HTTP_HOST} ^(www\.)?tatjanahorka.cz
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,QSA]
+
 RewriteCond %{REQUEST_URI}::$1 ^(.*?/)(.*)::\2
 RewriteCond %{DOCUMENT_ROOT}%1public/%2 -f
 RewriteRule ^(.*)$  public/$1 [END]
